uploaded ctf zip file

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </p>
         </div>
 
-        <p><a href="ctf.zip" download>Download Challenge File</a></p>
+        <p><a href="vietnamCTF.zip" download>Download Challenge File</a></p>
         <p><a href="cheatsheet.txt" download>Download Cheatsheet</a></p>
 
         <form id="flag-form">
